// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd acp --help 1`] = `
"cssltd acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: cssltd.local)
                                                              [string] [default: "cssltd.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd mcp --help 1`] = `
"cssltd mcp

manage MCP (Model Context Protocol) servers

Commands:
  cssltd mcp add [name]     add an MCP server
  cssltd mcp list           list MCP servers and their status                      [aliases: ls]
  cssltd mcp auth [name]    authenticate with an OAuth-enabled MCP server
  cssltd mcp logout [name]  remove OAuth credentials for an MCP server
  cssltd mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd attach --help 1`] = `
"cssltd attach <url>

attach to a running cssltd server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --dir         directory to run in                                                     [string]
  -c, --continue    continue the last session                                              [boolean]
  -s, --session     session id to continue                                                  [string]
      --fork        fork the session when continuing (use with --continue or --session)    [boolean]
      --cloud-fork  fetch session from cloud and continue locally (use with --session)     [boolean]
  -p, --password    basic auth password (defaults to CSSLTD_SERVER_PASSWORD)                [string]
  -u, --username    basic auth username (defaults to CSSLTD_SERVER_USERNAME or 'cssltd')    [string]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd run --help 1`] = `
"cssltd run [message..]

run cssltd with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help                          show help                                            [boolean]
  -v, --version                       show version number                                  [boolean]
      --print-logs                    print logs to stderr                                 [boolean]
      --log-level                     log level [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                          run without external plugins                         [boolean]
      --command                       the command to run, use message for args              [string]
  -c, --continue                      continue the last session                            [boolean]
  -s, --session                       session id to continue                                [string]
      --fork                          fork the session before continuing (requires --continue or
                                      --session)                                           [boolean]
      --cloud-fork                    fetch session from cloud and continue locally (use with
                                      --session)                                           [boolean]
      --share                         share the session                                    [boolean]
  -m, --model                         model to use in the format of provider/model          [string]
      --agent                         agent to use                                          [string]
      --format                        format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file                          file(s) to attach to message                           [array]
      --title                         title for the session (uses truncated prompt if no value
                                      provided)                                             [string]
      --attach                        attach to a running cssltd server (e.g.,
                                      http://localhost:4096)                                [string]
  -p, --password                      basic auth password (defaults to CSSLTD_SERVER_PASSWORD)
                                                                                            [string]
  -u, --username                      basic auth username (defaults to CSSLTD_SERVER_USERNAME or
                                      'cssltd')                                             [string]
      --dir                           directory to run in, path on remote server if attaching
                                                                                            [string]
      --port                          port for the local server (defaults to random port if no value
                                      provided)                                             [number]
      --variant                       model variant (provider-specific reasoning effort, e.g., high,
                                      max, minimal)                                         [string]
      --thinking                      show thinking blocks                                 [boolean]
      --replay                        replay interactive session history on resume and after resize
                                      (use --no-replay to disable)         [boolean] [default: true]
      --replay-limit                  cap visible interactive replay to the newest N messages
                                                                                            [number]
  -i, --interactive                   run in direct interactive split-footer mode
                                                                          [boolean] [default: false]
      --dangerously-skip-permissions  auto-approve permissions that are not explicitly denied
                                      (dangerous!)                        [boolean] [default: false]
      --auto                          auto-approve all permissions (for autonomous/pipeline usage)
                                                                          [boolean] [default: false]
      --demo                          enable direct interactive demo slash commands; pass one as the
                                      message to run it immediately       [boolean] [default: false]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd debug --help 1`] = `
"cssltd debug

debugging and troubleshooting tools

Commands:
  cssltd debug config        show resolved configuration
  cssltd debug lsp           LSP debugging utilities
  cssltd debug rg            ripgrep debugging utilities
  cssltd debug file          file system debugging utilities
  cssltd debug scrap         list all known projects
  cssltd debug skill         list all available skills
  cssltd debug snapshot      snapshot debugging utilities
  cssltd debug startup       print startup timing
  cssltd debug agent <name>  show agent configuration details
  cssltd debug v2            debug v2 catalog and built-in plugins
  cssltd debug info          show debug information
  cssltd debug paths         show global paths (data, config, cache, state)
  cssltd debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd providers --help 1`] = `
"cssltd auth

manage AI providers and credentials

Commands:
  cssltd providers list               list providers and credentials               [aliases: ls]
  cssltd providers login [url]        log in to a provider
  cssltd providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd agent --help 1`] = `
"cssltd agent

manage agents

Commands:
  cssltd agent create  create a new agent
  cssltd agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd upgrade --help 1`] = `
"cssltd upgrade [target]

upgrade cssltd to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                  [string] [choices: "curl", "npm", "yarn", "pnpm", "bun", "brew", "choco", "scoop"]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd uninstall --help 1`] = `
"cssltd uninstall

uninstall cssltd and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd serve --help 1`] = `
"cssltd serve

starts a headless cssltd server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: cssltd.local)
                                                              [string] [default: "cssltd.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd web --help 1`] = `
"cssltd web

start cssltd server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: cssltd.local)
                                                              [string] [default: "cssltd.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd models --help 1`] = `
"cssltd models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd stats --help 1`] = `
"cssltd stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd export --help 1`] = `
"cssltd export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd import --help 1`] = `
"cssltd import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd github --help 1`] = `
"cssltd github

manage GitHub agent

Commands:
  cssltd github install  install the GitHub agent
  cssltd github run      run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd pr --help 1`] = `
"cssltd pr <number>

fetch and checkout a GitHub PR branch, then run cssltd

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd session --help 1`] = `
"cssltd session

manage sessions

Commands:
  cssltd session list                list sessions
  cssltd session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd plugin --help 1`] = `
"cssltd plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd db --help 1`] = `
"cssltd db

database tools

Commands:
  cssltd db [query]     open an interactive sqlite3 shell or run a query                   [default]
  cssltd db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd mcp list --help 1`] = `
"cssltd mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd mcp add --help 1`] = `
"cssltd mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd mcp auth --help 1`] = `
"cssltd mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  cssltd mcp auth list  list OAuth-capable MCP servers and their auth status       [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd mcp logout --help 1`] = `
"cssltd mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd providers list --help 1`] = `
"cssltd providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd providers login --help 1`] = `
"cssltd providers login [url]

log in to a provider

Positionals:
  url  cssltd auth provider                                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd providers logout --help 1`] = `
"cssltd providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd agent create --help 1`] = `
"cssltd agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd agent list --help 1`] = `
"cssltd agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd session list --help 1`] = `
"cssltd session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]
  -a, --all         list sessions from all projects                       [boolean] [default: false]
  -s, --search      filter sessions by title                                                [string]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd session delete --help 1`] = `
"cssltd session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd github install --help 1`] = `
"cssltd github install

install the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd github run --help 1`] = `
"cssltd github run

run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       GitHub mock event to run the agent for                                  [string]
      --token       GitHub personal access token (github_pat_********)                      [string]
"
`;

exports[`Cssltd CLI help-text snapshots every documented command emits stable help text: cssltd db path --help 1`] = `
"cssltd db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;
